Sync movies and tv-series to lasted_shows table
